# LangChain-projects

./: .gitignore  readme.md  requirements.txt
1.LLMs/: 1_llm_code.py
2.ChatModels/: 1_chatmodels_openai.py  2_chatmodel_antropic.py  3_chatmodel_google.py  4_chatmodel_hf_api.py  5_chatmodel_hf_local.py
3.Embedding_model/: 1_embedding_openai_query.py  2_embedding_openai_document.py  3_embedding_hf_local.py  4_document_similarity.py
AgentGraph-RAG-SQL-Tavily/: readme.md
ChatBot_using_RAG/: utils.py
ChatSQL_Bot/: Langchain_NL2SQL.ipynb  readme.md
Chat_With_Pdf/: app.py
Chatbot/: locallama.py
Chatbot_Answering_from_Your_Own_Knowledge_Base/: Chat-Bot-with-Pinecone.ipynb  app.py  utils.py
Context Engineering/: toutorial.ipynb
Crew-AI/: guide.txt  report.md
Crew-AI/ai_latest_developement/: README.md  pyproject.toml
Crew-AI/ai_latest_developement/src/ai_latest_developement/: crew.py  main.py
Crew-AI/crewai-hierarchical-anthropic/: main.py  output.log.txt  pyproject.toml
Embeddings/: How_to_create_embedding.ipynb
Hybrid_Insight_Bot/: app.py
Hybrid_RAG/: readme.md
Insight_Bot/: app.py  readme.md
KnowledgeGraph-TabularData/: readme.md  requirements.txt
LangGraph/: batsman.ipynb  blog.ipynb  bmi_workflow.ipynb  chatbot.ipynb  llm_workflow.ipynb  persistence.ipynb  post_generator.ipynb  quadratic_equation.ipynb  review_replay_workflow.ipynb  upsc_essay.ipynb
MCP/making_client/: main.py  pyproject.toml
MemoryBot/: app.py  chat_download.txt  readme.md
NLP_to_SQL_with_LangChain/: examples.py  langchain_utils.py  main.py  prompts.py  table_details.py
Natural_Language_to_SQL_with_LangChain_and_LangSmith/: examples.py  langchain_utils.py  main.py  prompts.py  table_details.py
(+233 files in other folders)
