[project]
name = "ai_latest_developement"
version = "0.1.0"
description = "ai-latest-developement using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
ai_latest_developement = "ai_latest_developement.main:run"
run_crew = "ai_latest_developement.main:run"
train = "ai_latest_developement.main:train"
replay = "ai_latest_developement.main:replay"
test = "ai_latest_developement.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
